fixed css issue for the navigation button alignment

--- a/src/assets/css/theme/smart_wizard_theme_material.css
+++ b/src/assets/css/theme/smart_wizard_theme_material.css
@@ -12,6 +12,7 @@
 
 /* SmartWizard Theme: Dots */
 .sw-theme-material {
+    font-family: 'Montserrat', sans-serif !important;
     background: #fff;
     min-height: 50px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
@@ -59,6 +60,13 @@
     float: left;
     display: block;
     padding: 0;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+.justify-content-end {
+    -ms-flex-pack: end !important;
+    justify-content: flex-end !important;
+    display: flex;
 }
 
 .sw-theme-material .step-anchor a {
